--- a/index.html
+++ b/index.html
@@ -81,22 +81,15 @@
                 <img src="image/6.jpg".jpg" alt="banner" />
                 <div class="container banner-content">
                     <div id="da-slider" class="da-slider">
-                        <div class="da-slide">
-                            <!-- <h2>Webdesigner</h2>
-                            <p>Amazing free responsive website for free, enjoy!!!</p> -->
+                        <div class="da-slide">      
+                            <!-- <p>Amazing free responsive website for free, enjoy!!!</p> -->
                             <div class="da-img"></div>
-                            <h2>I am developer.</h2>
+                            <h2>I am a learner</h2>
                         </div>
                         <div class="da-slide">
-                            <h2>Bootstrap</h2>
-                            <p>I develop website using Bootstrap front-end framework..</p>
+                            <h2>I wanted to be a Web Developer and Designer</h2>
                             <div class="da-img"></div>
-                        </div>
-                        <div class="da-slide">
-                            <h2>HTML5/CSS3</h2>
-                            <p>HTML5 is a markup language used for structuring and presenting Web.</p>
-                            <div class="da-img"></div>
-                        </div>                        
+                        </div>                                   
                     </div>
                 </div>
             </div>
