--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
                         <div class="da-slide">      
                             <!-- <p>Amazing free responsive website for free, enjoy!!!</p> -->
                             <div class="da-img"></div>
-                            <h2>I am a learner</h2>
+                            <h2>I am a web developer</h2>
                         </div>
                         <div class="da-slide">
-                            <h2>I wanted to be a Web Developer and Designer</h2>
+                            <h2>I am a Web Designer.</h2>
                             <div class="da-img"></div>
                         </div>                                   
                     </div>
