--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <div class="da-slide">      
                             <!-- <p>Amazing free responsive website for free, enjoy!!!</p> -->
                             <div class="da-img"></div>
-                            <h2>I am a web developer</h2>
+                            <h2>I am a Web Developer</h2>
                         </div>
                         <div class="da-slide">
                             <h2>I am a Web Designer.</h2>
