--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <!-- Heading -->
                         <h2 style="text-align: center; font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;">My Qualification</h2>
                         <div>
-                            <table class="table table-bordered table-responsive">
+                            <table class="table table-bordered ">
                                 <thead style="background:#282a35;color:white;">
                                     <tr>
                                         <th  style="text-align: center;">Qualification</th>
