--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="container">
                 <div class="heading text-center">
                     <!-- Heading -->
-                    <h2 style="color:#282a35;font-family:Times New Roman;height:5%;">I am Sangam Gupta, a UI Designer & developer</h2>
+                    <h2 style="color:#282a35;font-family:Times New Roman;height:5%;">I am Sangam Gupta.</h2>
                 </div>
                 <div class="row">
                     <!-- item -->
