--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-2 skilltitle">Java</div>
+                            <div class="col-md-2 skilltitle">HTML5/CSS</div>
                             <div class="col-md-8">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
@@ -222,9 +222,20 @@
                                     </div>
                                 </div>
                             </div>
-                        </div> 
+                        </div>
+                        <div class="row">
+                            <div class="col-md-2 skilltitle">Bootstrap</div>
+                            <div class="col-md-8">
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                                        <span >90% Complete</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>      
+                    </div>
                     <div class="col-sm-6">
-                      <h2>Designing <strong>Skills</strong></h2>
+                        <h2>Designing <strong>Skills</strong></h2>
                         <p class="mrgBtm20">
                             Problem solving is not always about sitting in a board room talking about the way things should be done. I have a strong background in UI design which allows me to think on my feet and act upon it.
                         </p>
@@ -257,17 +268,6 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-2 skilltitle">Bootstrap</div>
-                                <div class="col-md-8">
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
-                                            <span >90% Complete</span>
-                                        </div>
-                                   </div>
-                               </div>
-                           </div>      
                         </div>
                         <div class="row">
                         <div class="col-md-2 skilltitle">Corel Draw</div>
