--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <!-- Heading -->
                         <h2 style="text-align: center; font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;">My Qualification</h2>
                         <div>
-                            <table class="table table-bordered ">
+                            <table class="table table-bordered table-responsive ">
                                 <thead style="background:#282a35;color:white;">
                                     <tr>
                                         <th  style="text-align: center;">Qualification</th>
@@ -204,7 +204,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-2 skilltitle">HTML5/CSS</div>
+                            <div class="col-md-2 skilltitle">Java</div>
                             <div class="col-md-8">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
@@ -223,16 +223,6 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-md-2 skilltitle">Bootstrap</div>
-                            <div class="col-md-8">
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
-                                        <span >90% Complete</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>      
                     </div>
                     <div class="col-sm-6">
                         <h2>Designing <strong>Skills</strong></h2>
@@ -275,6 +265,26 @@
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 95%;">
                                         <span > 85% Complete</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-2 skilltitle">HTML/CSS</div>
+                            <div class="col-md-8">
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+                                        <span >80% Complete</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-2 skilltitle">Bootstrap</div>
+                            <div class="col-md-8">
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+                                        <span >80% Complete</span>
                                     </div>
                                 </div>
                             </div>
