--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
                     <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
                         <!-- Heading -->
                         <h2 style="text-align: center; font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;">My Qualification</h2>
-                        <div>
-                            <table class="table table-bordered table-responsive ">
+                        <div table-responsive>
+                            <table class="table table-bordered">
                                 <thead style="background:#282a35;color:white;">
                                     <tr>
                                         <th  style="text-align: center;">Qualification</th>
