--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
                                     <tr>
                                         <td>12th</td>
                                         <td>Up Board</td>
-                                        <td>Sceince</td>
+                                        <td>Science</td>
                                         <td>54%</td>
                                     </tr>
                                     <tr>
                                         <td>10th</td>
                                         <td>BSEB ( Bihar board , Patna , 841435 )</td>
-                                        <td>Sceince</td>
+                                        <td>Science</td>
                                         <td>52%</td>
                                     </tr>
                                     <tr>
