--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a href="#" class="navbar-brand scroll-top logo"><b>Sangam Gupta</b></a>
+                        <a href="#" class="navbar-brand scroll-top logo"><b>Mr. Sangam Gupta</b></a>
                     </div>
                     <!--/.navbar-header-->
 
@@ -50,7 +50,7 @@
                         <div class="da-slide">      
                             <!-- <p>Amazing free responsive website for free, enjoy!!!</p> -->
                             <div class="da-img"></div>
-                            <h2>I am a Web Developer</h2>
+                            <h2>Salesforce Developer</h2>
                         </div>
                         <div class="da-slide">
                             <h2>I am a Web Designer.</h2>
@@ -112,16 +112,22 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>B.C.A First year</td>
+                                        <td>B.C.A Third year</td>
                                         <td>M.D.S  University , Ajmer , Rajshtan</td>
                                         <td>C.S</td>
-                                        <td>Continue</td>
+                                        <td>74.51%</td>
                                     </tr>
                                     <tr>
                                         <td>12th</td>
                                         <td>Up Board</td>
                                         <td>Science</td>
                                         <td>54%</td>
+                                    </tr>
+				    <tr>
+                                        <td>B.A First Year</td>
+                                        <td>Up Board</td>
+                                        <td>Art</td>
+                                        <td>50%</td>
                                     </tr>
                                     <tr>
                                         <td>10th</td>
@@ -169,6 +175,26 @@
                                 </div>
                             </div>
                         </div>
+			<div class="row">
+                            <div class="col-md-2 skilltitle">C#</div>
+                            <div class="col-md-8">
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                                        <span >90% Complete</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+			<div class="row">
+                            <div class="col-md-2 skilltitle">C++</div>
+                            <div class="col-md-8">
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                                        <span >90% Complete</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="row">
                             <div class="col-md-2 skilltitle">Java</div>
                             <div class="col-md-8">
@@ -179,8 +205,39 @@
                                 </div>
                             </div>
                         </div>
+			<div class="row">
+                            <div class="col-md-2 skilltitle">PHP/PHP Ajex</div>
+                            <div class="col-md-8">
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                                        <span >90% Complete</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+			<div class="row">
+                            <div class="col-md-2 skilltitle">Python</div>
+                            <div class="col-md-8">
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                                        <span >90% Complete</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+			
                         <div class="row">
-                            <div class="col-md-2 skilltitle">D . S</div>
+                            <div class="col-md-2 skilltitle">MySQL</div>
+                            <div class="col-md-8">
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+                                        <span >80% Complete</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+			<div class="row">
+                            <div class="col-md-2 skilltitle">JavaScript</div>
                             <div class="col-md-8">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
