--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <div class="heading text-center">
                     <!-- Heading -->
                     <h2 style="color:#282a35; font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;">My Skills</h2>
-                    <p>Lorem ipsum dolor sit amet , consectetur adipiscing</p>
+                    <p>These are my skills.</p>
                 </div>
                 <div class="row">
                     <div class="col-sm-6">
@@ -172,6 +172,9 @@
                                     <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
                                         <span >90% Complete</span>
                                     </div>
+				<div class="progress">
+  <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+</div>
                                 </div>
                             </div>
                         </div>
