--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <h2>Salesforce Developer</h2>
                         </div>
                         <div class="da-slide">
-                            <h2>I am a Web Designer.</h2>
+                            <h2>At Ireact Cloud Consult Pvt. Ltd</h2>
                             <div class="da-img"></div>
                         </div>                                   
                     </div>
