--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div id="#top"></div>
         <section id="home">
             <div class="banner-container">
-                <img src="image/6.jpg".jpg" alt="banner" />
+                <img src="image/profileimage.png" alt="banner" />
                 <div class="container banner-content">
                     <div id="da-slider" class="da-slider">
                         <div class="da-slide">      
