--- a/index.html
+++ b/index.html
@@ -563,6 +563,7 @@
                     <a href="#"><i class="fa fa-dribbble"></i></a>
                     <a href="#"><i class="fa fa-instagram"></i></a>
                     <a href="#"><i class="fa fa-github"></i></a>
+		    <a herf="#"><i class="bi bi-download"></i></a>
                 </div>
             </div>
         </footer>
