--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a href="#" class="navbar-brand scroll-top logo"><b>Mr. Sangam Gupta</b></a>
+                        <a href="#" class="navbar-brand scroll-top logo"><b>Sangam Gupta</b></a>
                     </div>
                     <!--/.navbar-header-->
 
