--- a/index.html
+++ b/index.html
@@ -161,6 +161,20 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-6">
+			<h2><strong>Salesforce</strong></h2>
+                        <p class="mrgBtm20" >
+                            It takes knowledge, smart work, and dedication to make great ideas come to life. I have been helping make great ideas happen for the past 7 years and am always ready for new challenges.
+                        </p>
+                        <div class="row">
+                            <div class="col-md-2 skilltitle">C language</div>
+                            <div class="col-md-8">
+                                <div class="progress">
+				    <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+					<span >90% Complete</span>
+				    </div> 
+                                </div>
+                            </div>
+                        </div>
                         <h2>Programming <strong>Skills</strong></h2>
                         <p class="mrgBtm20" >
                             It takes knowledge, smart work, and dedication to make great ideas come to life. I have been helping make great ideas happen for the past 7 years and am always ready for new challenges.
@@ -169,12 +183,9 @@
                             <div class="col-md-2 skilltitle">C language</div>
                             <div class="col-md-8">
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
-                                        <span >90% Complete</span>
-                                    </div>
-				<div class="progress">
-  <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-</div>
+				    <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+					<span >90% Complete</span>
+				    </div> 
                                 </div>
                             </div>
                         </div>
@@ -209,7 +220,7 @@
                             </div>
                         </div>
 			<div class="row">
-                            <div class="col-md-2 skilltitle">PHP/PHP Ajex</div>
+                            <div class="col-md-2 skilltitle">Core PHP</div>
                             <div class="col-md-8">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
@@ -340,28 +351,28 @@
 						</div>
                     </div>
                     <div class="col-sm-6">
-						<h2>Typing <strong>Skills</strong></h2>
-						<div class="row">
-							<div class="col-md-2 skilltitle">English</div>
-							<div class="col-md-8">
-								<div class="progress">
-									<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-										<span>60 Net Speed in 10 minute</span>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-2 skilltitle">Hindi</div>
-							<div class="col-md-8">
-								<div class="progress">
-									<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
-										<span >40 Net Speed in 10 minute</span>
-									</div>
-								</div>
-							</div>
+			<h2>Typing <strong>Skills</strong></h2>
+			<div class="row">
+				<div class="col-md-2 skilltitle">English</div>
+				<div class="col-md-8">
+					<div class="progress">
+						<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+							<span>60 Net Speed in 10 minute</span>
 						</div>
 					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-2 skilltitle">Hindi</div>
+				<div class="col-md-8">
+					<div class="progress">
+						<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
+							<span >40 Net Speed in 10 minute</span>
+						</div>
+					</div>
+				</div>
+			</div>
+		     </div>
                  </div>   
 			</section>
         <!--Gellary-->
