--- a/index.html
+++ b/index.html
@@ -166,11 +166,21 @@
                             It takes knowledge, smart work, and dedication to make great ideas come to life. I have been helping make great ideas happen for the past 7 years and am always ready for new challenges.
                         </p>
                         <div class="row">
-                            <div class="col-md-2 skilltitle">C language</div>
+                            <div class="col-md-2 skilltitle">Salesforce Admin</div>
                             <div class="col-md-8">
                                 <div class="progress">
-				    <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
-					<span >90% Complete</span>
+				    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+					<span >80% Complete</span>
+				    </div> 
+                                </div>
+                            </div>
+                        </div>
+			<div class="row">
+                            <div class="col-md-2 skilltitle">Salesforce Developer</div>
+                            <div class="col-md-8">
+                                <div class="progress">
+				    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+					<span >80% Complete</span>
 				    </div> 
                                 </div>
                             </div>
